--- a/mPushDemo/build.gradle
+++ b/mPushDemo/build.gradle
@@ -39,6 +39,5 @@ android {
 }
 
 dependencies {
-    compile 'com.mrocker.push:mPush:1.6.7'
-//    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.mrocker.push:mpush:1.6.7'
 }
